--- a/src/index.html
+++ b/src/index.html
@@ -13,6 +13,7 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
     />
+    <title>Dylan Greene</title>
   </head>
   <body>
     <div id="root"></div>
